added negative points button

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                   Two</button>
               </div>
               <button id="reset" class="resetButton button ">Reset</button>
+              <h2 class="score-fix">Score Fix</h2>
+              <div class="footer-players-fix">
+                <button id="p1Button-negative" class="button pButton">-1 Player
+                  One</button>
+                <button id="p2Button-negative" class="button pButton">-1 Player
+                  Two</button>
+              </div>
 
             </footer>
           </div>
